[gd_scene load_steps=9 format=3 uid="uid://blak8guq6x5jy"]

[ext_resource type="Texture2D" uid="uid://cx2pr3nroiq1b" path="res://imagens/backgrounds/background-menu-inicial.png" id="1_p6qw6"]
[ext_resource type="Script" uid="uid://7hh22cagyaua" path="res://scripts/menu-inicial/relatorio_selecao.gd" id="1_vhoy2"]
[ext_resource type="FontFile" uid="uid://b7iv04e430tio" path="res://fonts/Silkscreen/Silkscreen-Bold.ttf" id="2_gaaor"]
[ext_resource type="Theme" uid="uid://4vvlbttduirb" path="res://estilos/tema-botoes.tres" id="3_vhoy2"]
[ext_resource type="FontFile" uid="uid://clkjjfanemm5b" path="res://fonts/Silkscreen/Silkscreen-Regular.ttf" id="4_gl12n"]
[ext_resource type="Texture2D" uid="uid://b22k8x1vaao04" path="res://imagens/backgrounds/soma-teste-1.png" id="5_cv0od"]
[ext_resource type="Texture2D" uid="uid://cw30agoty483i" path="res://imagens/backgrounds/subtracao.png" id="6_ddhdm"]
[ext_resource type="Theme" uid="uid://ctbnfvmw4wfb6" path="res://estilos/botao-sair.tres" id="7_gaaor"]

[node name="RelatorioSelecao" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vhoy2")

[node name="BackgroundMenuInicial2" type="Sprite2D" parent="."]
modulate = Color(0.39256206, 0.39256206, 0.39256206, 1)
position = Vector2(239, 124)
scale = Vector2(0.317, 0.317)
texture = ExtResource("1_p6qw6")

[node name="fase2" type="Label" parent="."]
layout_mode = 0
offset_left = 278.0
offset_top = 28.0
offset_right = 412.0
offset_bottom = 49.0
size_flags_horizontal = 8
size_flags_vertical = 0
theme_override_constants/outline_size = 4
theme_override_constants/shadow_outline_size = 0
theme_override_fonts/font = ExtResource("2_gaaor")

[node name="somando" type="Button" parent="."]
layout_mode = 0
offset_left = 51.0
offset_top = 212.0
offset_right = 221.0
offset_bottom = 241.0
focus_mode = 0
theme = ExtResource("3_vhoy2")
theme_override_fonts/font = ExtResource("4_gl12n")
theme_override_font_sizes/font_size = 16
text = " somando"

[node name="sub" type="Button" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -222.0
offset_top = -60.0
offset_right = -53.0
offset_bottom = -31.0
grow_horizontal = 0
grow_vertical = 0
focus_mode = 0
theme = ExtResource("3_vhoy2")
theme_override_fonts/font = ExtResource("4_gl12n")
theme_override_font_sizes/font_size = 16
text = "SUBTRAINDO"

[node name="SomaTeste1" type="Sprite2D" parent="."]
position = Vector2(136.5, 127.5)
scale = Vector2(10.5625, 10.5625)
texture = ExtResource("5_cv0od")

[node name="SomaTeste2" type="Sprite2D" parent="."]
position = Vector2(342.5, 127.5)
scale = Vector2(10.5625, 10.5625)
texture = ExtResource("6_ddhdm")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -89.0
offset_top = 8.0
offset_right = 89.0
offset_bottom = 41.0
grow_horizontal = 2
size_flags_vertical = 8
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/line_spacing = 0
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 0
theme_override_constants/outline_size = 9
theme_override_constants/shadow_outline_size = 0
theme_override_fonts/font = ExtResource("2_gaaor")
theme_override_font_sizes/font_size = 25
text = "relat√≥rio"

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -237.0
offset_top = -25.0
offset_right = -187.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 0
focus_mode = 0
theme = ExtResource("7_gaaor")
theme_override_fonts/font = ExtResource("2_gaaor")
theme_override_font_sizes/font_size = 16
text = "SAIR"

[connection signal="pressed" from="somando" to="." method="_on_somando_pressed"]
[connection signal="pressed" from="sub" to="." method="_on_sub_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
